Fixing z-index problem with toolbar

--- a/src/style/toolbar.less
+++ b/src/style/toolbar.less
@@ -15,6 +15,7 @@
     box-sizing: border-box;
     box-shadow: 0 @hairline 0 0 rgba(0,0,0,0.66);
     -webkit-border-radius: 0 0 0.2rem 0.2rem;
+    z-index: 1;
 }
 
 .tool-spacer {
@@ -32,6 +33,7 @@
     box-sizing: border-box;
     display: none;
     box-shadow: 0 @hairline 0 0 rgba(0,0,0,0.66);
+    z-index: 1;
 }
 
 .toolbar-pop-over {
@@ -45,6 +47,7 @@
     box-sizing: border-box;
     box-shadow: 0 @hairline 0 0 rgba(0,0,0,0.66);
     -webkit-border-radius: 0 0 0.2rem 0.2rem;
+    z-index: 1;
 }
 
 .toolbar-pop-over li button:first-child {
